--- a/build.gradle
+++ b/build.gradle
@@ -24,3 +24,16 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext {
+    androidXKtxVersion = '1.3.2'
+    androidXAppCompatVersion = '1.2.0'
+    constraintLayout = '2.0.4'
+    coordinatorLayout = '1.1.0'
+    googleMaterial = '1.3.0'
+    recyclerView = '1.1.0'
+
+    junit = '4.13'
+    androidTestJunit = '1.1.2'
+    espresso = '3.3.0'
+}
