--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,10 @@ ext {
     coordinatorLayout = '1.1.0'
     googleMaterial = '1.3.0'
     recyclerView = '1.1.0'
+    retrofit = '2.9.0'
+    retrofit2ConverterGson = '2.9.0'
+    retrofit2AdapterRxjava2 = '2.6.4'
+    rxAndroid = '2.1.0'
 
     junit = '4.13'
     androidTestJunit = '1.1.2'
