- сервис возвращает Maybe, он еррор комплитится (теперь ошибка лимита запросов 429 не прокидывается в конечный Subscriber) - добавлены шиммеры

--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ ext {
     retrofit2ConverterGson = '2.9.0'
     retrofit2AdapterRxjava2 = '2.6.4'
     rxAndroid = '2.1.0'
+    shimmer = '0.5.0'
 
     junit = '4.13'
     androidTestJunit = '1.1.2'
