--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit2AdapterRxjava2"
 
     implementation "io.reactivex.rxjava2:rxandroid:$rxAndroid"
+    implementation "com.facebook.shimmer:shimmer:$shimmer"
 
 
     testImplementation "junit:junit:$junit"
