- добавлено кэширование в БД

--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ ext {
     retrofit2AdapterRxjava2 = '2.6.4'
     rxAndroid = '2.1.0'
     shimmer = '0.5.0'
+    room = '2.2.5'
 
     junit = '4.13'
     androidTestJunit = '1.1.2'
