--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ ext {
     rxAndroid = '2.1.0'
     shimmer = '0.5.0'
     room = '2.2.5'
+    swipeRefreshLayout = '1.1.0'
 
     junit = '4.13'
     androidTestJunit = '1.1.2'
