--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ ext {
     room = '2.2.5'
     swipeRefreshLayout = '1.1.0'
     dagger = '2.29.1'
+    glide = '4.11.0'
 
     junit = '4.13'
     androidTestJunit = '1.1.2'
