добавлена постраничная загрузка - и добавленные в избранное грузятся отдельно - фикс пустого экрана на загрузке при выкл интернете, когда нельзя сделать запрос на сервер для поиска похожих на запрос тикеров (не стала делать поиск похожих в базе при отсутствии интернета, похожие тикеры берутся из ответа сервера)

--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,7 @@ ext {
     swipeRefreshLayout = '1.1.0'
     dagger = '2.29.1'
     glide = '4.11.0'
+    paging = '2.1.2'
 
     junit = '4.13'
     androidTestJunit = '1.1.2'
