--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,9 @@ dependencies {
     // Glide
     implementation "com.github.bumptech.glide:glide:$glide"
 
+    //Paging
+    implementation "androidx.paging:paging-runtime-ktx:$paging"
+
 
     testImplementation "junit:junit:$junit"
     androidTestImplementation "androidx.test.ext:junit:$androidTestJunit"
